# bina

./: .gitignore  .travis.yml  Doxygen  Makefile  Makefile.am  Makefile.in  README.md  bootstrap  configure.ac  package.json
code/: .gitignore  Makefile.in  config.h  configure  configure.ac
code/src/: .gitignore  Makefile.am  Makefile.in  config.h.in  main.cpp
code/src/os/: Makefile.am  Makefile.in
code/src/os/ios/ttt/ttt/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m  ttt-Info.plist
code/src/os/ios/ttt/ttt.xcodeproj/: project.pbxproj
code/src/os/ios/ttt/ttt.xcodeproj/xcuserdata/johan.xcuserdatad/xcschemes/: ttt.xcscheme  xcschememanagement.plist
code/src/os/ios/ttt/ttt/Shaders/: Shader.fsh  Shader.vsh
code/src/os/linux/: Makefile.am  Makefile.in
config/: jshintrc.json
doc/html/: GL_CHECK-example.html  annotated.html  bina_8c.html  bina_8c_source.html  bina_8h.html  bina_8h_source.html  camera_8c.html  camera_8c_source.html  camera_8h.html  camera_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  error_8h.html  error_8h_source.html  examples.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  index.html  linmath_8h_source.html  main__android_8c_source.html  main__glut_8c.html  main__glut_8c_source.html  math_8c.html  math_8c_source.html  math_8h.html  math_8h_source.html  renderer_8c.html  renderer_8c_source.html  renderer_8h.html  renderer_8h_source.html  shader_8c.html  shader_8c_source.html  shader_8h.html  shader_8h_source.html  sprite_8c.html  sprite_8c_source.html  (+27 more)
doc/html/search/: all_61.js  all_62.js  all_63.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6d.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_77.js  all_78.js  classes_62.js  classes_63.js  classes_73.js  classes_74.js  classes_76.js  files_62.js  files_6d.js  files_72.js  files_73.js  files_74.js  functions_62.js  functions_63.js  functions_70.js  functions_72.js  functions_73.js  functions_74.js  search.js  typedefs_73.js  typedefs_74.js  variables_62.js  variables_63.js  variables_68.js  variables_6e.js  variables_70.js  variables_73.js  (+4 more)
m4/: am_path_sdl2.m4  bn_check_features.m4  bn_check_glew.m4  bn_check_host.m4  bn_check_libpng.m4  bn_check_packages.m4  bn_check_tc.m4
man/bina/chapter1/: scene1.json
poc/android/: AndroidManifest.xml  local.properties
poc/android-jni/jni/: Android.mk  gl_code.cpp  main.cpp  stdafx.h
poc/android-jni/jni/bina/: Bina.h  Game.cpp
poc/android/assets/: index.html
poc/android/assets/js/rat/: main.js
poc/android/res/layout/: main.xml
poc/android/res/values/: strings.xml
poc/hello-gl2/: build.xml
poc/html/: index.html
poc/html/js/rat/: Rat.js
poc/html/js/rat/container/: Viewport.js
poc/ios/bina/bina/: AppDelegate.h  AppDelegate.m  NativeViewController.h  NativeViewController.m  ViewController.h  ViewController.m  WebViewController.h  WebViewController.m  bina-Info.plist  bina-Prefix.pch  main.m
poc/ios/bina/bina.xcodeproj/: project.pbxproj
poc/ios/bina/bina.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
poc/ios/bina/bina/XIB/: NativeViewController.xib  ViewController_iPhone.xib  WebViewController.xib
poc/ios/poc_bina/poc_bina/: AppDelegate.h  AppDelegate.m  main.m  poc_bina-Info.plist  poc_bina-Prefix.pch
poc/ios/poc_bina/poc_bina.xcodeproj/: project.pbxproj
poc/ios/poc_bina/poc_bina.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
poc/ios/poc_bina/poc_bina/Controllers/: ViewController.h  ViewController.mm
poc/ios/templates/: install-templates.sh
poc/linux/: main  main.cpp  stdafx.h
poc/linux/bina/: Bina.cpp  Bina.h  Game.cpp  Game.h  Texture.h
poc/qt/binabuilder/binabuilder/: binabuilder.1  binabuilder_Prefix.pch  main.cpp
poc/qt/binabuilder/binabuilder.xcodeproj/: project.pbxproj
poc/qt/mockup/: bina.bmml
poc/qt/testQT/: TestGraphicsView.cpp  TestGraphicsView.h  TestWindow.cpp  TestWindow.h  button.cpp  button.h  calculator.cpp  calculator.h  main.cpp  testQT.1
poc/qt/testQT.xcodeproj/: project.pbxproj
poc/qt/testQT/moc/: moc_TestWindow.h  moc_calculator.h
poc/windows/vstudio/: .gitignore  Bina.sln  Bina.vcxproj  Bina.vcxproj.filters  stdafx.cpp  stdafx.h
projects/android/: .gitignore  AndroidManifest.xml  bootstrap  build.xml
projects/android/jni/: Android.mk
projects/android/res/values/: strings.xml
projects/macos/Bina/: AppDelegate.h  Bina-Prefix.pch  config.h
projects/macos/Bina.xcodeproj/: project.pbxproj
projects/macos/Bina.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/macos/Bina/Controllers/: MainWindowController.h
projects/macos/scripts/: copy_resources.sh
projects/vstudio11/Bina/: .gitignore  Bina.vcxproj.filters
src/: .gitignore  Makefile  Makefile.am  algebra.c  algebra.h  bina.c  bina.h  camera.c  camera.h  error.h  game.c  game.h  log.c  log.h  main.c  main.h  main_android.c  main_glut.c  math.c  math.h  memory.c  memory.h  renderer.c  renderer.h  renderer_gles.c  scene.c  scene.h  sdl2bina.h  shader.c  shader.h  sprite.c  sprite.h  tc_etc.c  tc_etc.h  tc_png.c  tc_png.h  tc_s3tc.c  tc_s3tc.h  texture.c  texture.h  (+4 more)
src/android/: AndroidManifest.xml  local.properties
src/android/jni/: Android.mk
src/android/jni/lib/libpng/: Android.mk
src/android/src/com/android/gl2jni/: GL2JNIActivity.java  GL2JNILib.java  GL2JNIView.java
src/html5/: index.html
src/html5/js/rat/: app.js  main.js
src/html5/js/rat/core/: Class.js  Rat.js
src/html5/js/rat/model/: Character.js  Director.js
src/main/: android.c  glut.c
src/projects/macos/Bina/: AppDelegate.m  Bina-Info.plist  main.m
src/projects/macos/Bina.xcodeproj/: project.pbxproj
src/projects/macos/Bina/Controllers/: MainWindowController.m
src/projects/macos/Bina/NIB/: MainWindow.xib
src/projects/vstudio11/Bina/: .gitignore  Bina.vcxproj  Bina.vcxproj.filters
src/wrapper/: gl.h  sdl.h
tools/devices/: basaidai.md  galaxys2.md  jitte.md  nexus4.md  nexus7.md
tools/teamcity/: install.sh
tools/valgrind/: bina.supp
(+45 files in other folders)
